* Updates the Plans to be more descriptive.
* On the login epilogue, don't show 'My Sites' if the account doesn't have any sites. 
* Fixes an issue where the wrong notification detail may be displayed when navigating between notifications.
* Localises the button to edit a comment.
* Localises the "Done" button on screen presented after publishing a Post.
* It's now easier to tap the Done button on the screen that's displayed after publishing a post.
* Fixes an issue where the Stats widget would always revert back to the primary site.
* When creating a new site, on the site type selection page, the 'Start with' label now wraps.
* Fixes issue where deleted users where still appearing in the site's People lists.
* Improvements to localisations.
* Localises the name of the Share Extension.
* Fixes an issue where stale images may appear when navigating between notifications.
* Add Change Password in Account Settings
* Fixes a crash caused by image uploading error handling.