@@ -12,3 +12,4 @@
 * Fixes an issue where stale images may appear when navigating between notifications.
 * Add Change Password in Account Settings
 * Fixes a crash caused by image uploading error handling.
+* More helpful error messages are now displayed if there's a problem setting a password when signing up for a new account.
